@@ -1,10 +1,0 @@
-#! /bin/sh -e
-
-if [ -d /usr/share/doc/gcc ]; then
-    echo "Removing old gcc doc directory."
-    rm -rf /usr/share/doc/gcc
-fi
-
-#DEBHELPER#
-
-exit 0
